# monobank-base-websocket-client

./: README.md  main.py  pyproject.toml
monobank_base_websocket/: _dataclasses.py  _parser.py  app.py
